# CedarLogic

./: .gitignore  .makefile  CMakeLists.txt  CedarLogic.h.in  CedarLogic.sln  CedarLogic.vcxproj  Doxyfile  DynamicGate.cpp  DynamicGate.h  FormBuilderApps.sln  HISTORY.txt  LICENSE.txt  MainFrame.cpp  Makefile  README.md  Structure.vsdx  appveyor.yml  icon.rc  resources.aps  resources.rc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: User_Story.md  bug_report.md  user_story.md
InstFiles/: UserLib.xml  UserLib_Example.xml
Installer/: Installer.wixproj  Product.wxs
cmake/: InstallLicense.txt
cmake/cpack/: FileAssociation.nsh  RegUninstallIcon.nsh
cmake/module/: LibraryTools.cmake  MsStaticRuntimeLibs.cmake  ResourceTools.cmake  VsSourceGroups.cmake
docs/: Building.md  Contributing.md  History.md
docs/design/: design_decisions.md  v2.4_design_philosophy.md
include/gui/: CircuitParse.h  GUICanvas.h  GUICircuit.h  LibraryParse.h  MainApp.h  MainFrame.h  OscopeCanvas.h  RamPopupDialog.h  gateImage.h  glToImage.h  guiGate.h  guiWire.h  klsGLCanvas.h  klsMiniMap.h  threadLogic.h  wireSegment.h
include/gui/GLFont/: glfont2.h
include/gui/command/: cmdAddTab.h  cmdCreateGate.h  cmdCreateWire.h  cmdDeleteSelection.h  cmdDeleteTab.h  cmdDeleteWire.h  cmdMoveGate.h  cmdMoveWire.h  cmdPasteBlock.h  cmdWireSegDrag.h  klsCommand.h
installer/: Product.wxs  installer.wixproj
logic/: CMakeLists.txt  Logic_version.hpp.in
logic/include/: logic_event.h  logic_junction.h  logic_values.h  logic_wire.h
logic/src/: logic_circuit.cpp  logic_event.cpp  logic_gate.cpp  logic_junction.cpp  logic_wire.cpp
logic/tests/: test.cpp  testxml.txt
res/: CedarLogic.desktop  CedarLogic_Help.chm  KLS_Logic.chm  LICENSE.txt  arial.glf  cl_gatedefs.xml  dark-colors.txt  mime.xml  settings.ini  standard-colors.txt
res/installerRes/: license.rtf
setup/: config.vc  setup.h  window.cpp
simulator/: .clang-format  CMakeLists.txt  Design.md  README.md  circuit.cpp  circuit.hpp  entities.cpp  entities.hpp  event.cpp  event.hpp  gate.cpp  gate.hpp  junction.cpp  junction.hpp  logic.cpp  logic.hpp  network.cpp  network.hpp  simulator.hpp  wire.hpp
simulator/scripts/: clang-format.sh
simulator/test/: test_circuit.cpp
simulator/tests/: test_circuit.cpp  test_entities.cpp  test_gate.cpp  test_junction.cpp  test_logic.cpp
src/: CedarLogicException.h  common.h  dbgmsg.h  settings_values.h  version.cpp  version.h
src/gui/: ADCPopupDialog.cpp  ADCPopupDialog.h  CMBParamDialog.cpp  CMBParamDialog.h  CircuitParse.cpp  CircuitParse.h  DynamicGate.cpp  DynamicGate.h  EditRegDialog.cpp  EditRegDialog.h  FSMParamDialog.cpp  FSMParamDialog.h  GUICanvas.cpp  GUICanvas.h  GUICircuit.cpp  GUICircuit.h  LibraryParse.cpp  LibraryParse.h  MainApp.cpp  MainApp.h  MainFrame.cpp  MainFrame.h  OscopeCanvas.cpp  OscopeCanvas.h  OscopeFrame.cpp  OscopeFrame.h  PaletteCanvas.cpp  PaletteCanvas.h  PaletteFrame.cpp  PaletteFrame.h  RamPopupDialog.cpp  RamPopupDialog.h  Settings.cpp  XMLParser.cpp  Z80PopupDialog.cpp  Z80PopupDialog.h  autoSaveThread.h  commands.cpp  commands.h  gateImage.cpp  (+24 more)
src/gui/GLFont/: glfont2.cpp  glfont2.h
src/gui/circuit/: GUICircuit.cpp  GUICircuit.h  guiGate.cpp  guiGate.h  guiGates.cpp  guiWire.cpp  guiWire.h  wireSegment.cpp  wireSegment.h
src/gui/collision/: klsBBox.h  klsCollisionChecker.cpp
src/gui/command/: cmdAddTab.cpp  cmdAddTab.h  cmdConnectWire.cpp  cmdConnectWire.h  cmdCreateGate.cpp  cmdCreateGate.h  cmdCreateGateStruct.cpp  cmdCreateGateStruct.h  cmdCreateWire.cpp  cmdCreateWire.h  cmdDeleteGate.cpp  cmdDeleteGate.h  cmdDeleteSelection.cpp  cmdDeleteSelection.h  cmdDeleteTab.cpp  cmdDeleteTab.h  cmdDeleteWire.cpp  cmdDeleteWire.h  cmdDisconnectWire.cpp  cmdDisconnectWire.h  cmdMergeWire.cpp  cmdMergeWire.h  cmdMoveGate.cpp  cmdMoveGate.h  cmdMoveSelection.cpp  cmdMoveSelection.h  cmdMoveWire.cpp  cmdMoveWire.h  cmdPasteBlock.cpp  cmdPasteBlock.h  cmdSetParams.cpp  cmdSetParams.h  cmdWireSegDrag.cpp  cmdWireSegDrag.h  klsCommand.cpp  klsCommand.h
src/gui/dialog/: ADCPopupDialog.cpp  ADCPopupDialog.h  ColorSettingsDialog.cpp  ColorSettingsDialog.h  EditRegDialog.cpp  EditRegDialog.h  RamPopupDialog.cpp  RamPopupDialog.h  Z80PopupDialog.cpp  Z80PopupDialog.h  paramDialog.cpp  (+1 more)
src/logic/: gate_T.cpp  gate_T.h  gate_adder.cpp  gate_adder.h  gate_and.cpp  gate_and.h  gate_bus_end.cpp  gate_bus_end.h  gate_clock.cpp  gate_clock.h  gate_compare.cpp  gate_compare.h  gate_decoder.cpp  gate_decoder.h  gate_driver.cpp  gate_driver.h  gate_equivalence.h  gate_jk_flip_flop.cpp  gate_jk_flip_flop.h  gate_junction.cpp  gate_junction.h  gate_mux.cpp  gate_mux.h  gate_n_input.cpp  gate_n_input.h  gate_node.cpp  gate_node.h  gate_or.cpp  gate_or.h  gate_pass.cpp  gate_pass.h  gate_pauselator.cpp  gate_pauselator.h  gate_priority_encoder.cpp  gate_priority_encoder.h  gate_pulse.cpp  gate_pulse.h  gate_ram.cpp  gate_ram.h  gate_register.cpp  (+14 more)
src/z80/: InstructionManager.cpp  WaveformFSM.cpp  Z_80LogicGate.cpp  Z_80LogicGate.h
wxWidgetsApp/: resource.h  settings.ini  wxWidgetsApp.vcproj  wxWidgetsApp.vcxproj  wxWidgetsApp.vcxproj.filters
wxWidgetsApp/GUI/: ADCPopupDialog.cpp  ADCPopupDialog.h  CircuitParse.cpp  CircuitParse.h  CircuitPrint.cpp  CircuitPrint.h  DynamicGate.cpp  DynamicGate.h  EditRegDialog.cpp  EditRegDialog.h  GUICanvas.cpp  GUICanvas.h  GUICircuit.cpp  GUICircuit.h  LibraryParse.cpp  LibraryParse.h  MainApp.cpp  MainApp.h  MainFrame.cpp  MainFrame.h  OscopeCanvas.cpp  OscopeCanvas.h  OscopeFrame.h  PaletteCanvas.cpp  PaletteCanvas.h  PaletteFrame.h  RamPopupDialog.cpp  XMLParser.h  autoSaveThread.cpp  autoSaveThread.h  cl_gatedefs.xml  commands.cpp  commands.h  gateImage.cpp  gateImage.h  gl_defs.cpp  gl_defs.h  gl_wrapper.h  guiGate.cpp  guiGate.h  (+19 more)
wxWidgetsApp/Z80/: InstructionManager.h  WaveformFSM.h  Z_80LogicGate.cpp  Z_80Registers.cpp  Z_80Registers.h
wxWidgetsApp/logic/: counted_pointer.h  license.txt  logic_circuit.cpp  logic_circuit.h  logic_defaults.h  logic_event.cpp  logic_event.h  logic_gate.cpp  logic_gate.h  logic_values.h
(+101 files in other folders)
